# hacker-news-clone-rust-graphql

./: .env  .gitignore  README.md  configuration.nix  shell.nix
backend/: .env  Cargo.toml  askama.toml  compose.yaml  postcard.nix  sqlx-data.json
backend/migrations/: 20210410122912_create_users.down.sql  20210410122912_create_users.up.sql  20220103095824_posts.down.sql  20220103095824_posts.up.sql
backend/nix/: sources.json
backend/src/: lib.rs  main.rs
backend/src/auth/: mod.rs
backend/src/database/: pool.rs
backend/src/database/queries/: user_by_id.sql  user_by_id_with_role.sql  user_by_username_with_role.sql
backend/src/error/: mod.rs
backend/src/graphql/: resolvers.rs  schema.rs
backend/src/scripts/: create_admin.rs
backend/src/templates/: admin-index.html  guestbook.html  index.html
frontend/: .env  .eslintrc.js  .graphqlrc.yml  .yarnrc.yml  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  relay.config.js  schema.graphql  tsconfig.json
frontend/.husky/: pre-commit
frontend/android/app/: build.gradle  proguard-rules.pro
frontend/android/app/src/debug/java/com/frontend/: ReactNativeFlipper.java
frontend/android/app/src/main/java/com/frontend/: MainActivity.java  MainApplication.java
frontend/scripts/: createTempTSConfig.js
frontend/src/: App.tsx  Configuration.ts  Log.ts  LoginScreen.tsx  Navigation.tsx  RelayEnvironment.ts  RelayEnvironment.tsx  Theme.ts  index.ts  theme.ts
frontend/src/components/: ArticlePage.tsx  Box.tsx  Button.tsx  Drawer.tsx  HomePage.tsx  Icon.tsx  LoginPage.tsx  NavigationBar.tsx  ProfilePage.tsx  Text.tsx
frontend/src/errors/: EnvVarNotFound.ts
frontend/src/i18n/: index.ts  react-i18next.d.ts
frontend/src/machines/: ErrorMachine.ts  index.ts
frontend/src/modals/: ErrorModal.tsx
frontend/src/navigation/: HomeStack.tsx  Navigation.tsx
frontend/src/screens/: ArticleScreen.tsx  HomeScreen.tsx  LoginScreen.tsx
frontend/src/services/: StorageService.ts
frontend/src/utils/: checkExhaustiveness.ts
frontend/storybook/: index.ts
frontend/storybook/stories/Button/: Button.stories.tsx
frontend/storybook/stories/CenterView/: index.js
frontend_new/: codegen.yml  package-lock.json  package.json
frontend_new/src/: App.tsx  Pagination.tsx  Upload.tsx  cool.graphql  index.css  index.tsx  login.graphql  upload.graphql
frontend_parcel/: default.nix  package-lock.json  package.json  tailwind.config.js
frontend_parcel/nix/: sources.json
frontend_parcel/src/: App.tsx  Guestbook.tsx  index.tsx
frontend_parcel/src/templates/: admin.html  guestbook.html  index.html
frontend_relay/: .env  package-lock.json  package.json
frontend_relay/src/: App.tsx  Bla.tsx  Login.ts  RelayEnvironment.ts  Upload.tsx  fetchGraphQL.ts  index.tsx
