[package]
name = "backend"
version = "0.1.0"
authors = ["André Krüger <222393+akrger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "create_admin"
path = "src/scripts/create_admin.rs"

[dependencies]
async-graphql = { version = "=2.8.2", features = ["chrono", "chrono-tz"] }
async-graphql-warp = "=2.8.2"
futures = "=0.3.14"
tokio = { version = "=1.4.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "=1.0.125", features = ["derive"] }
sqlx = { version = "=0.5.1", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
warp = "=0.3.1"
serde_json = "=1.0.64"
dotenv = "=0.15.0"
chrono = "=0.4.19"
argon2 = "=0.1.4"
rand_core = { version = "=0.6", features = ["std"] }