[package]
name = "backend"
version = "0.1.0"
authors = ["André Krüger <222393+akrger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "create_admin"
path = "src/scripts/create_admin.rs"

[dependencies]
async-graphql = { version = "=2.8.2", features = ["chrono", "chrono-tz"] }
async-graphql-warp = "=2.8.2"
futures = "=0.3.14"
tokio = { version = "=1.5.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "=1.0.125", features = ["derive"] }
sqlx = { version = "=0.5.2", features = ["runtime-tokio-rustls", "postgres", "time", "chrono", "uuid", "sqlx-macros", "macros"] }
warp = "=0.3.1"
serde_json = "=1.0.64"
dotenv = "=0.15.0"
chrono = "=0.4.19"
warp-sessions = "=1.0.14"
async-trait = "=0.1.50"
async-redis-session = "=0.1.1"
argon2 = "=0.1.5"
rand_core = { version = "=0.6.2", features = ["std"] }
pretty_env_logger = "=0.4.0"
log = "=0.4.14"
