[package]
name = "backend"
version = "0.1.0"
authors = ["André Krüger <222393+akrger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "create_admin"
path = "src/scripts/create_admin.rs"

[dependencies]
async-graphql = { version = "3.0.15", features = ["chrono", "chrono-tz"] }
async-graphql-warp = "3.0.19"
futures = "0.3.18"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.131", features = ["derive"] }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "time", "chrono", "uuid", "sqlx-macros", "macros"] }
ormx = {version = "0.10.0", features=["postgres"]}
warp = "0.3.2"
serde_json = "1.0.72"
thiserror= "1.0.30"
dotenv = "0.15.0"
chrono = "0.4.19"
warp-sessions = "1.0.16"
async-trait = "0.1.52"
async-redis-session = "0.2.2"
argon2 = "=0.1.5"
rand_core = { version = "0.6.3", features = ["std"] }
pretty_env_logger = "0.4.0"
log = "0.4.14"
phf = { version = "0.10", features = ["macros"] }
convert_case = "0.4.0"
strum = { version = "0.23", features = ["derive"] }
derive_more = {version="0.99.17",  default_features=false, features=["display"]}
regex = "1.5"
field_types = "*"
itertools = "0.10.2"
deadpool-redis = { version = "0.10.1" }
redis = { version = "0.21" }
